# kobsign-evidence

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: quickstart.md
src/kobsign_evidence/: __init__.py  __main__.py  cli.py  evidence.py  pades.py  pdf_extract.py  verifier.py
tests/: conftest.py  test_evidence_hash.py  test_pdf_extract.py  test_verifier_e2e.py
